src/index.css
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  line-height: 1.6;
  padding: 20px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 24px;
  margin-bottom: 16px;
  font-weight: 600;
}

p {
  margin-top: 0;
  margin-bottom: 16px;
}

ul,
ol {
  padding-left: 20px;
  margin-top: 0;
  margin-bottom: 16px;
}

ul,
ol,
li {
  list-style: inherit;
}

a {
  color: #007bff;
  text-decoration: none;
}

code {
  background-color: rgba(27, 31, 35, 0.05);
  margin-left: 2px;
  margin-right: 2px;
}

code[class*="language-"] {
  background-color: transparent;
  padding: 0;
  margin: 0;
  border-radius: 6px;
}

pre {
  background-color: #f6f8fa;
  padding: 16px;
  overflow: auto;
  border-radius: 6px;
}

blockquote {
  border-left: 4px solid rgba(169, 170, 166, 0.3);
  padding-left: 10px;
  margin: 10px 0;
  color: rgb(169, 170, 166);
}

.flairmd-container.custom {
  border-color: #007bff;
  background-color: #cce5ff;
}

